# ppc750cl

./: .gitignore  Cargo.toml  README.md  isa.yaml
.github/workflows/: test.yml
analysis/: Cargo.toml  cfa.md
analysis/src/: flow.rs  intrinsics.rs  lib.rs  slices.rs
codegen/: .gitignore  gen_masks.py  patterns.txt
disasm/: Cargo.toml
disasm-py/: Cargo.toml
disasm-py/src/: lib.rs
disasm/src/: formatter.rs  generated.rs  isa.rs  isa.yaml  iter.rs  lib.rs  macros.rs  prelude.rs
disasm/tests/: test_disasm.rs
dol/: Cargo.toml
dol-analysis/: Cargo.toml
dol-analysis/src/: init_section.rs  main.rs  text_section.rs
dol/src/: lib.rs
flow-graph/: Cargo.toml
flow-graph/src/: flow.rs  main.rs  slices.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
genisa/: Cargo.toml
genisa/src/: main.rs
lib/: Cargo.toml
lib/src/: formatter.rs  isa.rs  lib.rs
macros/: Cargo.toml
macros/src/: isa.rs  isa.yaml  lib.rs  writer.rs
rand/: Cargo.toml
rand/src/: main.rs
src/: main.rs
vm/: Cargo.toml
vm/src/: lib.rs
