[package]
name = "ppc750cl-analysis"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Control-flow and data-flow analysis for ppc750cl"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
itertools = "0.10"
petgraph = "0.6"
ppc750cl = { version = "0.2.0", path = "../disasm" }
