[package]
name = "ppc750cl-py"
version = "0.1.1"
edition = "2018"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Python bindings for PowerPC 750CL Disassembler"
repository = "https://github.com/terorie/ppc750cl"

[lib]
name = "ppc750cl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module", "multiple-pymethods"] }
ppc750cl = { version = "0.1.1", path = "../disasm" }
