[package]
name = "ppc750cl-py"
version = "0.1.1"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Python bindings for PowerPC 750CL Disassembler"
repository = "https://github.com/terorie/ppc750cl"

[lib]
name = "ppc750cl"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.16", features = ["multiple-pymethods"] }
ppc750cl = { version = "0.1.1", path = "../disasm" }
