[package]
name = "ppc750cl"
version = "0.1.1"
edition = "2018"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Disassembler for PowerPC 750CL"
keywords = ["powerpc", "wii", "gamecube"]
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
num-traits = "0.2.14"
ppc750cl-macros = { path = "../macros", version = "0.1.1" }
serde = "1.0.129"
