[package]
name = "ppc750cl"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Disassembler for PowerPC 750CL"
keywords = ["powerpc", "wii", "gamecube"]
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
num-traits = "0.2"
serde = "1.0"
