[package]
name = "dol-analysis"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "main.dol analysis experiment"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
dol = { version = "0.2.0", path = "../dol" }
clap = "3"
ppc750cl = { version = "0.2.0", path = "../disasm" }
ppc750cl-analysis = { version = "0.2.0", path = "../analysis" }
twoway = "0.2.2"
