[package]
name = "dol"
version = "0.1.0"
edition = "2018"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Deserializer for the DOL executable format"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
