[package]
name = "ppc750cl-flow-graph"
version = "0.1.1"
edition = "2018"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Control flow graph analysis for PowerPC 750CL"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
clap = "2.33"
parse_int = "0.5.0"
ppc750cl = { version = "0.1.1", path = "../disasm" }
