[package]
name = "ppc750cl-fuzz"
version = "0.1.1"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Complete fuzzer for ppc750cl"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
num_cpus = "1.13"
ppc750cl = { path = "../disasm", version = "0.1.1" }
