[package]
name = "ppc750cl-genisa"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Rust code generator for ppc750cl"
repository = "https://github.com/terorie/ppc750cl"


[dependencies]
itertools = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
