[package]
name = "ppc750cl-rand"
version = "0.1.0"
edition = "2018"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Generate random PowerPC 750CL instructions"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
ppc750cl = { path = "../lib", version = "0.1.0" }
rand_core = "0.5"
sfmt = "0.6"
