[package]
name = "ppc750cl-rand"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Generate random PowerPC 750CL instructions"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
ppc750cl = { path = "../disasm", version = "0.2.0" }
rand_core = "0.6"
sfmt = "0.7"
