[package]
name = "ppc750cl-vm"
version = "0.2.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Very broken VM for PowerPC 750CL code"
repository = "https://github.com/terorie/ppc750cl"

[dependencies]
ppc750cl = { version = "0.2.0", path = "../disasm" }
